#3520 : managing lazy loading of getDatasetExpressions for datasets